--- a/buf.yaml
+++ b/buf.yaml
@@ -1,5 +1,5 @@
 version: v1
-name: buf.build/teamwaf/auth
+name: buf.build/teamwaf/woorizip-auth
 deps:
   - buf.build/googleapis/googleapis
 breaking:
